- 
    Bug 
- 
    Resolution: Fixed
- 
    P2: Important 
- 
    None
- 
    4.7.2
- 
    None
Using a QWebView with a Socks5 server doesn't seem to work. The same Socks5 server works fine with both firefox or gnome socksify support. Inspection of the traffic with wireshark shows the server obeying the Sock5 protocol, but the Qt client aborting.
I have attached both a wireshark capture showing the problem. And an example socks5 server which exhibits the problem. Compile, then run with ./socks-demo <port-number-for-socks5>
- relates to
- 
                    QTBUG-76367 flaky tests in tst_qftp -         
- Closed
 
-         
- 
                    QTBUG-38385 QTcpSocket auto test: temporarily disable Socks5 proxy tests -         
- Closed
 
-